Add kubernetes list limit and continue query params and update swagger for it
